# prt-rl

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  README.md  board.json  environment.yaml  pyproject.toml
.github/workflows/: build_and_deploy.yml
demos/: demo_ppo.py  dqn_gold_explorer.py  game_controller_car_race.py  game_controller_robot_game.py  human_cliff_walking.py  human_gold_explorer.py  human_robot_game.py  joystick.py  monte_carlo_robot_game.py  ppo_pendulum.py  qlearning_cliff_walking.py  qlearning_robot_game.py  random_car_race.py  random_robot_game.py  sample_average_bandits.py  sarsa_robot_game.py
docs/: conf.py  gallery.rst  index.rst
docs/demos/: demo_simple.ipynb  random_robot_game.ipynb
docs/source/: algorithm.md  getting-started.md  home-page.md  installation.md
environments/: .project  bandit.py  tic_tac_toe.py
multi-armed-bandit/: .project  comparing_epsilons.py  comparing_optimistic.py  epsilon-greedy-mab-tutorial.ipynb  optimistic-initial-values-mab-tutorial.ipynb  ucb1-mab-tutorial.ipynb
projects/dqn/: dqn.py  dqn_main.py
projects/flappy-bird/: flappy-bird.py
projects/gold_explorer/: gold_explorer.py
projects/k_bandits/: bandits.py
src/prt_rl/: __init__.py  a2c.py  agent.py  cli.py  dagger.py  dqn.py  human.py  policy_gradient.py  ppo.py  pretrained.py  random.py  sac.py  td3.py
src/prt_sim/: rendering.py
tests/: test_agent.py  test_dagger.py  test_dqn.py  test_policy_gradient.py  test_ppo.py  test_pretrained.py  test_td3.py
tests/common/: test_buffers.py  (+10 more)
tic-tac-toe/: comparing_epsilons.py  comparing_optimistic.py  play_tic_tac_toe.py  tic_tac_toe.py
torchrl/: invert_double_pend_ppo.py  moutain_car_ppo.py  structs.py
udacity/: black_jack_monte_carlo.py  dynamic_programming.py  frozenlake_dynamic_programming.py  monte_carlo.py  requirements.txt  temporal_difference.py
(+135 files in other folders)
