[project]
name = "prt-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gavin Strunk", email = "gavin.strunk@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pygame>=2.6.1",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "tensordict>=0.7.2",
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
